# tasteful-sqirrel

./: CMakeLists.txt  Makefile  README.md
include/tasteful_squirrel/: tasteful_squirrel.h  tasteful_squirrel_mac.h
src/: main.cpp  tasteful_squirrel_mac.cpp
tests/: CMakeLists.txt  tasteful_squirrel_mac_test.cpp
